# SailrMC

./: CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING.md  README.md
.github/workflows/: build.yml
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
flatpak/: org.sailrmc.SailrMC.yml  sailrmc
launcher/: Application.cpp  Application.h  main.cpp
launcher/modplatform/flame/: FileResolvingTask.cpp  FlameAPI.cpp  FlameAPI.h  FlameCheckUpdate.cpp
launcher/net/: Download.cpp  Upload.cpp
launcher/ui/dialogs/: AboutDialog.cpp  SkinUploadDialog.cpp  SkinUploadDialog.ui
launcher/ui/pages/global/: APIPage.cpp  APIPage.ui  AccountListPage.cpp
program_info/: CMakeLists.txt  org.sailrmc.SailrMC.desktop.in  org.sailrmc.SailrMC.metainfo.xml.in  sailrmc.6.scd  sailrmc.manifest.in  sailrmc.qrc  sailrmc.rc.in
